pertain to code internals. However, these dictate that PRRTE v3.0.0
require use of PMIx v4.2.2 or above to compile. Note that this doesn't
impact the PMIx level associated with any applications executed by
PRRTE - the only requirement is that applications link against a
PMIx version that meets the PMIx cross-version requirements (i.e., a
minimum of PMIx v2.5).

Detailed changes:

PR #1586: Multiple commits
  - Extend PBS allocation detection to cover Cobalt
  - Broaden ability to require PRRTE to discover slots
  - Fix default slots count when using --use-hwthread-cpus
  - Cleanup schizo/prte help files
  - schizo-ompi: add examples for verbose [dvm] block
  - schizo:ompi: require arg when specifying dvm
  - rank_file/LSF: Fix LSB_AFFINITY_HOSTFILE ranking policy
  - Fix the load-balancing and span round-robin mappers
  - doc: Fix --rank-by help output
PR #1575: Ensure we init the available node bit tracker
PR #1572: Fix some default map/rank policy settings
PR #1570: Multiple commits
  - rmaps/base: Fix segv on failed-map
  - ompi/schizo: Fix deprecated message for rankfile
  - Rankfile slots fix and LSF support fix for LSB_AFFINITY_HOSTFILE
PR #1564: Add an example that retrieves node IDs
PR #1562: Remove check for resilience that caused a segfault
PR #1557: Update NEWS
PR #1556: Multiple commits
  - Support query of pset membership
  - Cleanup grpcomm cruft
  - remove some unused vars
  - squash warnings
  - unused var
  - more unused vars
  - remove unused vars and fix rc/ret typo
  - misc unused var cleanups
  - Reduce debugger confusion
  - Pickup missing changes
PR #1548: Multiple commits
  - alps fixes for mca move
  - schizo/ompi: Fix --report-pid/sid.
  - Change --stop-in-* to take optional arguments.
  - Update Open MPI mpirun help text
  - Fix memory leaks in RML and at job termination.
  - plm/tm: Fix build breakage
PR #1539: Multiple commits
  - Fix a typo and expand debugger example range to cover MPI
  - ras/lsf: Fix build breakage